samples/_failures_safe/1761405444_ae4d94_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_139d3aad.c: In function ‘main’:
./samples/SAFE/__tmp_139d3aad.c:154:45: error: ‘total_’ undeclared (first use in this function)
  154 |     printf("Total error validations: %d\n", total_
      |                                             ^~~~~~
./samples/SAFE/__tmp_139d3aad.c:154:45: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_139d3aad.c:154:51: error: expected ‘)’ at end of input
  154 |     printf("Total error validations: %d\n", total_
      |           ~                                       ^
      |                                                   )
./samples/SAFE/__tmp_139d3aad.c:154:5: error: expected declaration or statement at end of input
  154 |     printf("Total error validations: %d\n", total_
      |     ^~~~~~
